--- a/BBoxTool/mainwindow.ui
+++ b/BBoxTool/mainwindow.ui
@@ -63,6 +63,24 @@
      </layout>
     </item>
     <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QLabel" name="lblClassNameFile">
+        <property name="text">
+         <string>Classname file</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="btnSelectClassFile">
+        <property name="text">
+         <string>Select classname file</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
